--- a/resources/index.html
+++ b/resources/index.html
@@ -1,9 +1,10 @@
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<div class="container">
+<div class="container-fluid">
 </div>
 </body>
 <script src="main.js"></script>
